# PokerFront

./: .gitmodules  CMakeLists.txt
resources/data_table/: text.csv
sources/: main.cpp
sources/common/: math.h  math2dx.h
sources/data/: binary_font_data.h
sources/define/: text_id.generated.h
sources/io/: binary_reader.cpp  binary_reader.h
sources/logic_core/: board.h  card.h
sources/presenter/: card.h  presentable_object.h
sources/presenter/renderer/: renderer.h  renderer_d3d.cpp  renderer_d3d.h
tools/resource_packer/: main.py  packer_base.py  text_packer.py
tools/resource_packer/code_gen/: __init__.py  code_gen_base.py  cpp_code_gen.py  typing.py
